examples/test/testpolicy15864.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15864
  namespace: namespace464
spec:
  podSelector:
    matchLabels:
      key43: value41
      key11: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value2
      podSelector:
        matchLabels:
          key15: value24
          key30: value5
